--- a/src/confirmacao.css
+++ b/src/confirmacao.css
@@ -1,11 +1,11 @@
-.aluguel-confirmado{
+.confirmado{
     background-color: rgba(218, 226, 219, 0.199);
     width: 50%;
     margin: 15% auto;
     padding: 20px;
     text-align: center;
     box-sizing: border-box;
-    box-shadow: 2px 2px 5px 5px rgb(228, 218, 218);
+    box-shadow: 2px 2px 5px 5px rgb(224, 221, 221);
     font-size: larger;
     font-family: Arial, Helvetica, sans-serif;
 }
